feat: update index.html with meta tags for SEO and add favicon

--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      name="description"
+      content="Let's Connect is a vibrant social network for Developer where people meet, share, and grow together. Join the conversation and build meaningful connections."
+    />
+    <meta
+      name="keywords"
+      content="social network,Developer Platform,letsconnect,connect, friends, community, Let's Connect, share, meet people"
+    />
+    <meta name="author" content="Sahil kushwaha" />
+    <link rel="icon" type="image/x-icon" href="./src/assets/favicon.ico" />
+
+    <title>Let's Connect</title>
   </head>
   <body>
     <div id="root"></div>
