--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="icon" type="image/x-icon" href="./src/assets/favicon.ico" />
 
     <title>Let's Connect</title>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </head>
   <body>
     <div id="root"></div>
